[package]
name = "jaime"
version = "0.1.0"
authors = ["Opecks <opecks.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9"
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15.0"